# tg-account-mcp

./: .env.example  .gitignore  .pre-commit-config.yaml  .secrets.baseline  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  codeql.yml  dependency-review.yml
scripts/: first_run.sh
src/tg_account_mcp/: __init__.py  __main__.py  auth.py  client.py  server.py  tools.py
tests/: test_registry.py  test_tools.py
