[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tg-account-mcp"
version = "0.1.0"
description = "MCP server wrapping Telethon for personal Telegram account access"
requires-python = ">=3.11"
dependencies = [
    "telethon>=1.36.0",
    "mcp>=1.0.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.4.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/tg_account_mcp"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 100
